fix btn-light and btn-dark when switching to dark mode

--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -99,13 +99,38 @@ img.logo.logo-dark {
   display: none;
 }
 
-[data-bs-theme="dark"] { // stylelint-disable-line stylistic/string-quotes
+@include color-mode(dark) {
   img.logo {
     display: none;
 
     &.logo-dark {
       display: inline;
     }
+  }
+}
+
+// This is a custom button theme that changes light to dark when dark mode is enabled
+.btn-light-dark {
+  @include button-variant(
+    #f8f9fa,
+    #f8f9fa,
+    $hover-background: shade-color(#f8f9fa, $btn-hover-bg-shade-amount),
+    $hover-border: shade-color(#f8f9fa, $btn-hover-border-shade-amount),
+    $active-background: shade-color(#f8f9fa, $btn-active-bg-shade-amount),
+    $active-border: shade-color(#f8f9fa, $btn-active-border-shade-amount)
+  );
+}
+
+@include color-mode(dark) {
+  .btn-light-dark {
+    @include button-variant(
+      #343a40,
+      #343a40,
+      $hover-background: shade-color(#343a40, $btn-hover-bg-shade-amount),
+      $hover-border: shade-color(#343a40, $btn-hover-border-shade-amount),
+      $active-background: shade-color(#343a40, $btn-active-bg-shade-amount),
+      $active-border: shade-color(#343a40, $btn-active-border-shade-amount)
+    );
   }
 }
 
